--- a/prototype/conf/game/spells/dagger.yaml
+++ b/prototype/conf/game/spells/dagger.yaml
@@ -1,5 +1,5 @@
 ---
-id: "dagger"
+name: "Dagger"
 description: "Strikes nearby targets with a daggur dealing ${this.character.stats.strength / 2} direct damage."
 cooldown: 0.5
 casttime: 0.20
