--- a/prototype/conf/service/routingserver.yaml
+++ b/prototype/conf/service/routingserver.yaml
@@ -12,7 +12,7 @@ transport:
       target: "patching.node"
       route: "gameinfo"
   type: "REST"
-  secure: true
+  secure: false
   port: 1443
   timeout: 3000
   maxRequestBytes: 512
