--- a/prototype/conf/game/spells/regeneration.yaml
+++ b/prototype/conf/game/spells/regeneration.yaml
@@ -6,6 +6,7 @@ description: |
 cooldown: 12.0
 casttime: 2.0
 target: caster
+mobile: false
 onCastBegin:
   jexl:
     return spells.energy(source, -10);
