new spells; shadow step (assasin) and soul contract (necromancer).

--- a/prototype/conf/game/class/assassin.yaml
+++ b/prototype/conf/game/class/assassin.yaml
@@ -17,7 +17,7 @@ spells:
   - "front stab"
   - "corrupting venom"
   - "ice venom"
-  - "shadow step"
+  - "shadow_step"
   - "shadow escape"
   - "potent_venom"
   - "dagger"
