--- a/prototype/conf/game/class/necromancer.yaml
+++ b/prototype/conf/game/class/necromancer.yaml
@@ -16,7 +16,7 @@ spells:
   - "drain"
   - "necrotic bolt"
   - "necrotic prayer"
-  - "soul contract"
+  - "soul_contract"
   - "deaths emissary"
   - "consuming bolt"
   - "sword swing"
