adapt to new TimerSource API's of core 1.2.0 + upgrade grwrapper.

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,3 +1,7 @@
 dependencies {
-    compile "com.github.codingchili.chili-core:core:$project.version"
+    compile("com.github.codingchili.chili-core:core:$project.version") {
+        exclude group: 'org.elasticsearch.client', module: 'elasticsearch-rest-high-level-client'
+        exclude group: 'io.vertx', module: 'vertx-mongo-client'
+        exclude group: 'io.vertx', module: 'vertx-hazelcast'
+    }
 }
