player inventory / item equip / item consume / starting items per class

--- a/prototype/conf/game/class/assassin.yaml
+++ b/prototype/conf/game/class/assassin.yaml
@@ -21,6 +21,9 @@ spells:
   - "potent_venom"
   - "shadow_step"
   - "shadow escape"
+items:
+  - "dagger"
+  - "underwear"
 stats:
   strength: 16
   intelligence: 14
