--- a/prototype/conf/game/class/necromancer.yaml
+++ b/prototype/conf/game/class/necromancer.yaml
@@ -20,6 +20,9 @@ spells:
   - "deaths emissary"
   - "consuming bolt"
   - "sword swing"
+items:
+  - "sword"
+  - "underwear"
 stats:
   strength: 10
   intelligence: 18
