--- a/prototype/conf/game/class/paladin.yaml
+++ b/prototype/conf/game/class/paladin.yaml
@@ -22,7 +22,8 @@ spells:
   - "blinding light"
   - "hammer blow"
 items:
-  - "battleaxe"
+  - "flail"
+  - "plate"
   - "underwear"
 stats:
   strength: 16
