--- a/prototype/conf/game/npc/lilith.yaml
+++ b/prototype/conf/game/npc/lilith.yaml
@@ -14,6 +14,19 @@ stats:
   health: 1000
   maxhealth: 1000
   movement: 210
+loot:
+  - item: "apple_golden"
+    probability: 0.42
+    min: 1
+    max: 3
+  - item: "apple_green"
+    probability: 0.76
+    min: 2
+    max: 8
+  - item: "apple_red"
+    probability: 1.0
+    min: 4
+    max: 16
 spawn:
   jexl: "return true;"
 death:
