update armor/weapon types for classes + remove deprecated java items.

--- a/prototype/conf/game/class/assassin.yaml
+++ b/prototype/conf/game/class/assassin.yaml
@@ -8,9 +8,9 @@ model:
   scale: 0.16
 weapons:
   - "dagger"
-armor:
-  - "cloth"
+armors:
   - "leather"
+  - "cloth"
 spells:
   - "dagger"
   - "backstabber"
