--- a/prototype/conf/system/security.yaml
+++ b/prototype/conf/system/security.yaml
@@ -35,6 +35,9 @@ dependencies:
       authentication:
         service: realmregistry
         secret: realmSecret
+keystores:
+  - path: 'C:\Users\chili\Documents\chili-game-2ext\prototype\conf\system\certificates\keystore.jks'
+    password: 'secret'
 argon:
   iterations: 1
   memory: 8192
