--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-#org.gradle.daemon=true
-#org.gradle.parallel=true
-#org.gradle.caching=true
-#org.gradle.jvmargs=-Xmx1024M
-#org.gradle.configureondemand=true
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.jvmargs=-Xmx1024M
+org.gradle.configureondemand=true
