--- a/prototype/conf/game/spells/dagger.yaml
+++ b/prototype/conf/game/spells/dagger.yaml
@@ -1,6 +1,6 @@
 ---
 name: "Dagger"
-description: "Strikes nearby targets with a daggur dealing ${this.character.stats.strength / 2} direct damage."
+description: "Strikes nearby targets with a daggur dealing ${this.character.stats.strength / 2} direct damage. Deals 50% bonus damage if target stands still."
 cooldown: 0.5
 casttime: 0.20
 recharge: 3
@@ -16,6 +16,7 @@ onCastComplete:
     damage = (source.stats[Attribute.strength] * -1 / 2);
     for (creature : game.creatures().all()) {
       if (!creature.equals(source)) {
-        spells.damage(source, creature, damage, DamageType.physical);
+        amplifier = (creature.vector.velocity == 0) ? 1.5 : 1.0;
+        spells.damage(source, creature, damage * amplifier, DamageType.physical);
       }
     }
