--- a/prototype/conf/game/spells/dagger.yaml
+++ b/prototype/conf/game/spells/dagger.yaml
@@ -10,11 +10,14 @@ onCastBegin:
   jexl:
     return spells.energy(source, -15);
 onCastComplete:
-  jexl: |
+  groovy: |
+    import com.codingchili.instance.model.stats.Attribute;
+    import com.codingchili.instance.model.spells.DamageType;
+
     log.accept('casting dagger completed');
 
     damage = (source.stats[Attribute.strength] * -1 / 2);
-    for (creature : game.creatures().all()) {
+    game.creatures().all().collect().each { creature ->
       if (!creature.equals(source)) {
         amplifier = (creature.vector.velocity == 0) ? 1.5 : 1.0;
         spells.damage(source, creature, damage * amplifier, DamageType.physical);
