--- a/prototype/conf/game/dialog/johnny.yaml
+++ b/prototype/conf/game/dialog/johnny.yaml
@@ -2,7 +2,7 @@
 start: "welcome"
 enabled:
   groovy: |
-    return !source.quests.complete('johnny_and_the_dragonfly');
+    return !source.quests.complete('johnny_and_the_dragonfly') || !source.quests.complete('johnny_and_the_dragonfly_ii');
 options:
   welcome:
     text: "Hello, ${player.name}. I need your help.."
@@ -13,18 +13,28 @@ options:
         text: "Not right now."
       - id: "squito_slay"
         text: "The squitos are no more."
+      - id: "water_done"
+        text: "Here is some water."
   squito_slay:
+    available:
+      groovy: |
+        return source.quests.at('johnny_and_the_dragonfly_ii', 'kill_squito');
+    handler:
+      groovy: |
+        quests.advance(source, 'johnny_and_the_dragonfly_ii')
+  later:
+    text: ~
+    available:
+      groovy: |
+        return !source.quests.has('johnny_and_the_dragonfly') || !source.quests.has('johnny_and_the_dragonfly_ii');
+  water_done:
+    text: "Oh, thank you! Missy will be most pleased!"
     available:
       groovy: |
         return source.quests.at('johnny_and_the_dragonfly', 'bring_water');
     handler:
       groovy: |
-        quests.advance(source, 'johnny_and_the_dragonfly')
-  later:
-    text: ~
-    available:
-      groovy: |
-        return !source.quests.has('johnny_and_the_dragonfly');
+        quests.advance(source, 'johnny_and_the_dragonfly');
   water:
     text: "Oh, thank you! Missy will be most pleased!"
     available:
@@ -34,17 +44,17 @@ options:
       groovy: |
         quests.start(source, 'johnny_and_the_dragonfly');
   slayer:
-    text: "Ah, we got a violent one over here."
+    text: "Ah, thank you ${player.name}!"
     available:
       groovy: |
-        return !source.quests.has('johnny_and_the_dragonfly');
+        return !source.quests.has('johnny_and_the_dragonfly_ii');
     handler:
       groovy: |
-        quests.start(source, 'johnny_and_the_dragonfly');
+        quests.start(source, 'johnny_and_the_dragonfly_ii');
   working:
     available:
       groovy: |
-        return source.quests.has('johnny_and_the_dragonfly');
+        return source.quests.has('johnny_and_the_dragonfly') || source.quests.has('johnny_and_the_dragonfly_ii');
   help:
     text: "My little friend is so thirsty, the big bad squitos have monopolized the water fountain. She just needs a bit of water please."
     next:
@@ -56,3 +66,6 @@ options:
         text: "Maybe later."
       - id: "working"
         text: "I'm working on it."
+    available:
+      groovy: |
+        return !source.quests.has('johnny_and_the_dragonfly') || !source.quests.has('johnny_and_the_dragonfly_ii');
