--- a/prototype/conf/system/security.yaml
+++ b/prototype/conf/system/security.yaml
@@ -8,6 +8,9 @@ dependencies:
       logging:
         service: logserver
         secret: secret
+  service/socialserver:
+    preshare:
+      - clientSecret
   service/logserver:
     preshare: []
     secrets:
