--- a/prototype/conf/game/spells/dagger.yaml
+++ b/prototype/conf/game/spells/dagger.yaml
@@ -16,10 +16,19 @@ onCastComplete:
 
     log.accept('casting dagger completed');
 
+    RANGE = 192
+    aoe = source.vector.copy().setSize(RANGE);
+
     damage = (source.stats[Attribute.strength] * -1 / 2);
-    game.creatures().all().collect().each { creature ->
+    game.creatures().radius(aoe).collect().each { creature ->
       if (!creature.equals(source)) {
-        amplifier = (creature.vector.velocity == 0) ? 1.5 : 1.0;
-        spells.damage(source, creature, damage * amplifier, DamageType.physical);
+        amplify = (creature.vector.velocity == 0);
+        amplifier = (amplify) ? 1.5 : 1.0;
+
+        spells.damage(source, creature)
+          .physical(damage * amplifier)
+          .critical(amplify)
+          .effect("dagger")
+          .apply();
       }
     }
