fixed npc spawning clone stats + added squito npc.

--- a/prototype/conf/game/instances/level 3.yaml
+++ b/prototype/conf/game/instances/level 3.yaml
@@ -11,6 +11,18 @@ npcs:
   point:
     x: 600
     y: 600
+- id: "squito"
+  point:
+    x: 750
+    y: 750
+- id: "squito"
+  point:
+    x: 800
+    y: 750
+- id: "squito"
+  point:
+    x: 850
+    y: 750
 onStartup:
   jexl: |
     //game.npcs().spawn("Illicit Lilith");
