--- a/services/build.gradle
+++ b/services/build.gradle
@@ -8,7 +8,7 @@ subprojects {
 }
 
 dependencies {
-    compile 'org.codehaus.groovy:groovy-jsr223:3.0.0-alpha-3'
+    compile 'org.codehaus.groovy:groovy-jsr223:3.0.0-beta-3'
 }
 
 subprojects.each {
