dagger requires at least 1 creature in range to start cast.

--- a/prototype/conf/game/spells/dagger.yaml
+++ b/prototype/conf/game/spells/dagger.yaml
@@ -7,8 +7,11 @@ recharge: 3
 charges: 5
 target: caster
 onCastBegin:
-  jexl:
-    return spells.energy(source, -5);
+  groovy: |
+    RANGE = 326
+    aoe = source.vector.copy().setSize(RANGE);
+    in_range = game.creatures().radius(aoe).size() > 1;
+    return in_range && spells.energy(source, -5);
 onCastComplete:
   groovy: |
     import com.codingchili.instance.model.stats.Attribute;
