--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ cache:
   directories:
   - "$HOME/.gradle/caches/"
   - "$HOME/.gradle/wrapper/"
+git:
+  submodules: false
 deploy:
   provider: releases
   api_key:
