--- a/common/build.gradle
+++ b/common/build.gradle
@@ -2,6 +2,6 @@ dependencies {
     compile("com.github.codingchili.chili-core:core:$project.version") {
         exclude group: 'org.elasticsearch.client', module: 'elasticsearch-rest-high-level-client'
         exclude group: 'io.vertx', module: 'vertx-mongo-client'
-        exclude group: 'io.vertx', module: 'vertx-hazelcast'
+        /*exclude group: 'io.vertx', module: 'vertx-hazelcast'*/
     }
 }
