--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,21 @@
-import org.apache.tools.ant.taskdefs.condition.Os
+plugins {
+    id "java"
+    id "org.jetbrains.kotlin.jvm" version "1.4.0"
+    id "org.jetbrains.dokka" version "1.4.0"
+}
 
-apply plugin: 'java'
+repositories {
+    jcenter()
+}
+
+import org.apache.tools.ant.taskdefs.condition.Os
 
 project.version = "1.3.4"
 project.group = 'com.github.codingchili.chili-game-ext'
 
 subprojects {
-    apply plugin: 'java'
+    plugins.apply("java")
+    plugins.apply("org.jetbrains.kotlin.jvm")
 
     version = rootProject.version
     group = rootProject.group
@@ -37,9 +46,15 @@ subprojects {
         }
     }
 
+    sourceSets {
+        main.kotlin.srcDirs += 'main/java'
+        main.java.srcDirs += 'main/java'
+    }
+
     repositories {
         mavenLocal()
         maven { url 'https://jitpack.io' }
+        jcenter()
         mavenCentral()
     }
 
@@ -121,15 +136,16 @@ task prototype(type: JavaExec, dependsOn: subprojects.classes) {
     }
 }
 
-task alljavadoc(type: Javadoc) {
-    source subprojects.collect { it.sourceSets.main.allJava }
+/*task alljavadoc(type: Javadoc) {
+    source subprojects.collect { it.sourceSets.main.allSource }
     classpath = files(subprojects.collect { it.sourceSets.main.compileClasspath })
 }
 
 task javadocJar(type: Jar, dependsOn: alljavadoc) {
     classifier = 'javadoc'
     from alljavadoc.destinationDir
-}
+}*/
+
 
 task testReport(type: TestReport, dependsOn: 'build') {
     destinationDir = file("$buildDir/reports/allTests")
@@ -142,8 +158,9 @@ task archiveTestReport(type: Zip, dependsOn: testReport) {
 }
 
 jar.enabled = false
-javadoc.dependsOn javadocJar
+//javadoc.dependsOn dokka
 
+/*
 artifacts {
     archives javadocJar
-}
+}*/
