updated README, wrapper and configuration.

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,5 @@ include 'common',
         'services:social',
         'services:router',
         'services:logging',
-        'services:website'
+        'services:website',
+        'client'
