--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,14 @@ org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.jvmargs=-Xmx1024M
+
+# experimental options
+
+# configuration cache, no idea if it breaks anything.
+org.gradle.unsafe.configuration-cache=true
+
+# file system watching
+org.gradle.unsafe.watch-fs=true
+
+# known to break the build where subprojects depends on common.
 org.gradle.configureondemand=false
