--- a/services/build.gradle
+++ b/services/build.gradle
@@ -5,6 +5,7 @@ subprojects {
         compile project(':common')
 
         implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.10"
+        implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.10"
 
         testCompile 'io.vertx:vertx-unit:3.8.0'
         testCompile 'junit:junit:4.12'
