refactored client builds + readme split.

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ org.gradle.jvmargs=-Xmx1024M
 # experimental options
 
 # configuration cache, no idea if it breaks anything.
-org.gradle.unsafe.configuration-cache=true
+#org.gradle.unsafe.configuration-cache=true
 
 # file system watching
 org.gradle.unsafe.watch-fs=true
