--- a/services/build.gradle
+++ b/services/build.gradle
@@ -3,10 +3,6 @@ apply plugin: 'java'
 subprojects {
     dependencies {
         compile project(':common')
-
-        implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.10"
-        implementation "org.jetbrains.kotlin:kotlin-reflect:1.3.10"
-
         testCompile 'io.vertx:vertx-unit:3.8.0'
         testCompile 'junit:junit:4.12'
     }
@@ -17,7 +13,7 @@ dependencies {
 }
 
 task allJar(type: Jar, dependsOn: subprojects.jar) {
-    archiveBaseName = 'service'
+    archiveBaseName = 'services'
     subprojects.each { subproject ->
         from subproject.configurations.archives.allArtifacts.files.collect {
             zipTree(it)
@@ -26,3 +22,4 @@ task allJar(type: Jar, dependsOn: subprojects.jar) {
 }
 
 jar.dependsOn allJar
+jar.enabled = false
