added configuration for existing resources

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,8 @@ org.gradle.jvmargs=-Xmx1024M
 
 # experimental options
 
-# configuration cache, no idea if it breaks anything.
-#org.gradle.unsafe.configuration-cache=true
+# configuration cache, breaks a bunch of tasks when enabled.
+org.gradle.unsafe.configuration-cache=false
 
 # file system watching
 org.gradle.unsafe.watch-fs=true
