disable building for the banking service

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
 rootProject.name = 'server'
+//'services:banking',
 include 'common',
-        'services:banking',
         'services:authentication',
         'services:realm',
         'services:realmregistry',
