upgrade to core 1.4, vertx 4 and gradle 7.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 org.gradle.daemon=true
-org.gradle.parallel=true
-org.gradle.caching=true
+org.gradle.parallel=false
+org.gradle.caching=false
 org.gradle.jvmargs=-Xmx2g -Dkotlin.daemon.jvm.options=-Xmx2g
 
 # experimental options
