--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,7 +1,13 @@
+apply plugin: 'java-library'
+
 project.group = 'com.codingchili.common'
 
 dependencies {
-    compile("com.github.codingchili.chili-core:core:$project.version") {
+    api('io.dropwizard.metrics:metrics-jvm:4.2.2')
+    api('com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.12.1')
+    api('com.fasterxml.jackson.core:jackson-databind:2.12.1')
+
+    api("com.github.codingchili:core:$project.version") {
         exclude group: 'org.elasticsearch.client', module: 'elasticsearch-rest-high-level-client'
         exclude group: 'io.vertx', module: 'vertx-mongo-client'
         /*exclude group: 'io.vertx', module: 'vertx-hazelcast'*/
